# wichita-housing-logistics

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  wrangler.toml
.github/workflows/: rust.yml
archive-site/: index.html  style.css
assets/: _headers
docs/: README.md  agent-playbook.md  building-features.md  edge-deployment.md  how-leptos-works.md  hybrid-deployment.md
docs/diagrams/: compilation-model.mmd  edge-architecture.mmd  hybrid-architecture.mmd  request-lifecycle.mmd  server-function-flow.mmd
migrations/: 0001_init.sql  0002_seed.sql  0003_share_tokens.sql  0005_sitrep.sql
scripts/: bootstrap.sh  build-edge.sh  check-deps.sh  hash-assets.mjs  init.sh  rotate-cf-tokens.sh  seed-local.sh  seed-pilot.sql  verify-hashed-assets.mjs
src/: api.rs  app.rs  asset_hashes.rs  build_info.rs  lib.rs  main.rs  operator.rs
src/components/: activity_page.rs  case_page.rs  connect_page.rs  dashboard_page.rs  home_page.rs  households_page.rs  inventory_page.rs  layout.rs  mod.rs  placements_page.rs  reference_page.rs  resources_page.rs  routing_page.rs  situational_page.rs  todo_page.rs
src/server/: activity.rs  dashboard.rs  households.rs  mod.rs  placements.rs  resources.rs  sitrep.rs  state.rs  todos.rs
style/: main.css
var/cargo-build.lock/: timestamp
